fix: searchbar overlapping wonderland logo

--- a/packages/common-config/static/common/styles/global.css
+++ b/packages/common-config/static/common/styles/global.css
@@ -473,6 +473,7 @@ nav.navbar.navbar--fixed-top + .main-wrapper {
     system-ui,
     -apple-system,
     sans-serif;
+  z-index: 1000;
 }
 
 .navbar__search-input::placeholder {
